// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker Compact Style renders correctly 1`] = `
<div
  class="fd-time-picker"
  uid="time-picker"
>
  <div
    class="fd-popover"
  >
    <div
      class="fd-popover__control"
    >
      <div
        class="fd-input-group fd-input-group--after fd-input-group--compact"
      >
        <!---->
         
        <input
          class="fd-input fd-form__control fd-input--compact"
          placeholder=""
          type="text"
        />
          
        <span
          class="fd-input-group__addon fd-input-group__addon--after fd-input-group--compact fd-input-group__addon--button"
        >
          <button
            class="fd-button--light sap-icon--fob-watch"
          />
        </span>
      </div>
    </div>
     
  </div>
</div>
`;

exports[`TimePicker With Meridian renders correctly 1`] = `
<div
  class="fd-time-picker"
  uid="time-picker"
>
  <div
    class="fd-popover"
  >
    <div
      class="fd-popover__control"
    >
      <div
        class="fd-input-group fd-input-group--after"
      >
        <!---->
         
        <input
          class="fd-input fd-form__control"
          placeholder=""
          type="text"
        />
          
        <span
          class="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
        >
          <button
            class="fd-button--light sap-icon--fob-watch"
          />
        </span>
      </div>
    </div>
     
  </div>
</div>
`;

exports[`TimePicker renders correctly 1`] = `
<div
  class="fd-time-picker"
  uid="time-picker"
>
  <div
    class="fd-popover"
  >
    <div
      class="fd-popover__control"
    >
      <div
        class="fd-input-group fd-input-group--after"
      >
        <!---->
         
        <input
          class="fd-input fd-form__control"
          placeholder="Pick a time"
          type="text"
        />
          
        <span
          class="fd-input-group__addon fd-input-group__addon--after fd-input-group__addon--button"
        >
          <button
            class="fd-button--light sap-icon--fob-watch"
          />
        </span>
      </div>
    </div>
     
  </div>
</div>
`;
